change raw nbconvert to markdown

--- a/Analyzing Diamonds.ipynb
+++ b/Analyzing Diamonds.ipynb
@@ -3014,9 +3014,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "```\n",
     "df[\"depth\"] = ((2 * df[\"z\"]) / (df[\"x\"] + df[\"y\"])) * 100\n",
     "\n",
     "-->\n",
@@ -3029,7 +3031,8 @@
     "\n",
     "-->\n",
     "\n",
-    "(df[\"depth\"] / (100 * 2)) * (df[\"x\"] + df[\"y\"]) = df[\"z\"]"
+    "(df[\"depth\"] / (100 * 2)) * (df[\"x\"] + df[\"y\"]) = df[\"z\"]\n",
+    "```"
    ]
   },
   {
